[tool.poetry]
name = "package-build"
version = "0.1.0"
description = ""
authors = ["insolor"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
requests = "^2.32.3"
pydantic = "^2.7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "streamlit run app.py"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "D",
    # "D100",  # Missing docstring in public module
    # "D104",  # Missing docstring in public package
    # "D105",  # Missing docstring in magic method
    # "D200",  # One-line docstring should fit on one line
    # "D212",  # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN201",  # Ignore "Missing return type annotation for public function", tests don't return anything
    "D",  # Don't warn about missing documentation in tests
]
