[project]
name = "package-build"
version = "0.1.0"
description = ""
authors = [{ name = "insolor" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "streamlit>=1.47.1,<2",
    "requests>=2.32.4,<3",
    "pydantic>=2.11.7,<3",
    "loguru>=0.7.3,<0.8",
    "streamlit-gettext>=0.0.4,<0.0.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7,<0.13",
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
]

[tool.poe.tasks]
run = "streamlit run app.py"
xgettext.shell = "xgettext -d messages -o package_build/locale/messages.pot app.py package_build/*.py --from-code=UTF-8 --no-location"
msgfmt = "find ./package_build/locale -name \\*.po -execdir msgfmt messages.po -o messages.mo \\;"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    # "D100",  # Missing docstring in public module
    # "D104",  # Missing docstring in public package
    # "D105",  # Missing docstring in magic method
    # "D200",  # One-line docstring should fit on one line
    # "D212",  # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN201",  # Ignore "Missing return type annotation for public function", tests don't return anything
    "D",  # Don't warn about missing documentation in tests
]
